--- a/style.css
+++ b/style.css
@@ -1,11 +1,11 @@
-*{
+* {
     padding: 0;
     margin: 0;
 }
 
-.main{
-    background-color: #f8d1b4;
-   
+.main {
+    background-color: #e4e4e7;
+
     min-height: 100vh;
     display: flex;
     justify-content: center;
@@ -13,83 +13,101 @@
     padding: 20px 0;
 
 }
-.outer{
-    background-color: #e37b58;
+
+.outer {
+    background-color: #edba15;
     width: 95%;
     min-height: 95vh;
     border-radius: 30px;
     display: flex;
     justify-content: end;
 }
-.inner{
-    background-color: #fdf7eb;
-  width: 95%;
-  min-height: 100vh;
+
+.inner {
+    background-color: #ffffff;
+    width: 95%;
+    min-height: 100vh;
     border-radius: 30px;
-   display: flex;
-   justify-content: center;
-   flex-direction: column;
-   align-items: center;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
     position: relative;
 }
-.main_content{
+
+.main_content {
     /* display: flex;
     justify-content: center;
     align-items: center; */
-    height: 70%;
+    height: 60%;
     width: 40%;
     /* background-color: red; */
-    border: 2px solid rgb(99, 98, 98);
+    border: 2px solid black;
     border-radius: 10px;
-margin-bottom: 20px;
-position: relative;
-margin: 0 auto;
-/* background-color: yellow; */
+    margin-bottom: 20px;
+    position: relative;
+    margin: 0 auto;
+    /* background-color: yellow; */
 }
-.main_content .btn{
-position: absolute;
-bottom: 10px;
-display: flex;
-justify-content: center;
-/* background-color: red; */
-width: 100%;
+
+.main_content .btn {
+    position: absolute;
+    bottom: 10px;
+    display: flex;
+    justify-content: center;
+    width: 100%;
+
 
 }
 
-.main_content .btn button{
+.main_content .btn button {
     margin: 10px;
     padding: 10px;
+    background-color: #ffc700;
+    border-radius: 20px;
+    border: 2px solid black;
+
 }
 
-.inner h1{
+.inner h1 {
     text-align: center;
     font-size: 30px;
 }
-.inner h2{
+
+.inner h2 {
     text-align: center;
     font-size: 16px;
     color: #5b5e60;
     font-weight: 200;
     margin: 5px 0 5px 0;
 }
+
 .main_content ul {
-    
-        list-style-type: none; /* Removes bullet points */
-        padding: 0; /* Optional: Removes default padding */
-        margin: 0; /* Optional: Removes default margin */
-        text-align: center; 
+
+    list-style-type: none;
+    /* Removes bullet points */
+    padding: 0;
+    /* Optional: Removes default padding */
+    margin: 0;
+    /* Optional: Removes default margin */
+    text-align: center;
 }
 
-.main_content ul li{
-    
-    background-color: #d9396f;
-height: auto;   
-width: 80%;
-padding: 10px; 
-border-radius: 10px;
-/* margin-top: 10px; */
-margin: 10px auto;
-color: white;
+.main_content ul li {
+
+    background-color: #ffc700;
+    height: auto;
+    width: 80%;
+    padding: 10px;
+    border-radius: 10px;
+    /* margin-top: 10px; */
+    margin: 15px auto;
+    color: black;
+    font-size: 20px;
+    text-align: left;
+    font-weight: normal;
+    display: flex;
+    justify-content: space-between;
 }
 
 .menu {
@@ -99,8 +117,15 @@ color: white;
     top: -3%;
 
 }
-.menu img{
-   
+
+.menu img {
+
     height: 100px;
+
+}
+.copy-btn{
+    margin-left: 20px;
+    width: 40px;
+    height:50px ;
 
 }
